test/lambda/negative/syntax/unexpected_eof.ls
// @expect-error: E102
// @description: Unexpected end of file - incomplete expression

let x = 1 +
